tests/dataset/tpc-ds/compiler/c/q37.error
/tmp/TestCCompiler_TPCDS_Goldenq374145659591/001/prog.c: In function ‘test_TPCDS_Q37_simplified’:
/tmp/TestCCompiler_TPCDS_Goldenq374145659591/001/prog.c:228:51: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  228 |   if (test_TPCDS_Q37_simplified_result.len != tmp1.len) {
      |                                                   ^
      |                                                   ->
/tmp/TestCCompiler_TPCDS_Goldenq374145659591/001/prog.c:232:60: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  232 |       if (test_TPCDS_Q37_simplified_result.data[i3] != tmp1.data[i3]) {
      |                                                            ^
      |                                                            ->
/tmp/TestCCompiler_TPCDS_Goldenq374145659591/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_TPCDS_Goldenq374145659591/001/prog.c:292:38: error: incompatible types when assigning to type ‘list_int’ from type ‘result_item_list_t’
  292 |   test_TPCDS_Q37_simplified_result = result;
      |                                      ^~~~~~
